test/cases/compile_errors/len_access_on_array_many_ptr.zig
export fn foo() void {
    const x: [*][5]u8 = undefined;
    _ = x.len;
}

// error
// backend=stage2
// target=native
//
// :3:10: error: type '[*][5]u8' does not support field access
